# concordia

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  NOTES.md  PLANS.md  README.rst  environment.yml  pyproject.toml  tox.ini
data/: concordia_cmip7_v0-4-0  variabledefs-cmip6.csv  variabledefs-cmip7_v0-4-0_fixSO2NMVOC_BiocharSCM.csv  variabledefs-rescue.csv
data/compare_wfd_inputs/: config_cmip7_v0_1_testing_ukesm_remind_gdp.csv  config_cmip7_v0_1_testing_ukesm_remind_harm_overrides.csv  config_cmip7_v0_1_testing_ukesm_remind_indexraster_country_info.txt  config_cmip7_v0_1_testing_ukesm_remind_indexraster_region_info.txt  config_cmip7_v0_1_testing_ukesm_remind_model.csv  config_cmip7_v0_1_testing_ukesm_remind_regionmapping.csv  config_cmip7_v0_1_testing_ukesm_remind_settings.txt  config_cmip7_v0_1_testing_ukesm_remind_variabledefs.csv
data/historical/: cmip7_history_world_0012.csv
docs/source/: index.rst
notebooks/: HOWTORUN_RESCUE.md  README.rst  build-harmonization-report-cmip7.py  build-harmonization-report.ipynb  build-harmonization-report.py  cdr_maps.py  check_country_level_aggregation-CEDS-ESGF.py  check_country_level_aggregation.py  check_gridding_proxy.py  check_gridding_scenarios_outputs.py  compare_to_CEDS_ESGF.py  config-rescue.yaml  config.yaml  config_cmip7_v0_2.yaml  config_cmip7_v0_testing.yaml  config_cmip7_v0_testing_ukesm_remind.yaml  example_config.yaml  generate_ceds_based_future_proxy_netcdfs-cmip7.py  investigate_aircraft_cmip7.py  investigate_biomassburning_cmip7.py  investigate_cdr_cmip7.py  local-config-rescue.yaml  plot_animated_grids.py  prepare-variabledefinitions.ipynb  prepare-variabledefinitions.py  workflow-cmip6.ipynb  workflow-cmip6.py  workflow-cmip7-already_region_harmonized.py  workflow-cmip7-download-CEDS-raw-proxy-files.py  workflow-cmip7.py  workflow-rescue.py  workflow.ipynb  workflow.py
notebooks/cmip7/: NEGATIVE_VALUES_ANALYSIS.md  README.md  WORKFLOW_ANALYSIS.md  WORKFLOW_DOCUMENTATION.md  check_VOCspeciation_scenario_results.py  check_VOCspeciation_share_proxies.py  check_china_taiwan_hist.py  check_file_formats.py  check_gridded-scenarios-Aircraft-latitude.py  check_gridded-scenarios-cmip7-vs-cmip6.py  check_gridded-scenarios-compare-to-ceds-esgf.py  check_gridded-scenarios-global-sectoral-aggregation-compared-to-input.py  check_gridded_scenario_junctions-ext.py  check_gridded_scenario_qc-ext.py  check_gridded_scenario_qc.py  check_model_input_negatives.py  check_original_model.py  check_plot-animated-grids.py  check_plot-global-total-timeseries.py  check_plots_for_documentation.py  check_so2_nh3_plumes.py  check_validate-before-upload.py  compare_gridded_versions.py  investigate_erw.py  (+47 more)
tests/: test_cmip7_utils.py  test_concordia.py
(+41 files in other folders)
